k8s/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: backend
    name: backend
spec:
    selector:
        app: backend
    type: ClusterIP
    ports:
        - name: http
          port: 8080
          protocol: TCP
          targetPort: http
