k8s/manifests/metrics-server.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        k8s-app: metrics-server
    name: metrics-server
    namespace: kube-system
spec:
    ports:
        - name: https
          port: 443
          protocol: TCP
          targetPort: https
    selector:
        k8s-app: metrics-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        k8s-app: metrics-server
    name: metrics-server
    namespace: kube-system
spec:
    selector:
        matchLabels:
            k8s-app: metrics-server
    strategy:
        rollingUpdate:
            maxUnavailable: 0
    template:
        metadata:
            labels:
                k8s-app: metrics-server
        spec:
            containers:
                - args:
                      - --cert-dir=/tmp
                      - --secure-port=4443
                      - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
                      - --kubelet-use-node-status-port
                      - --metric-resolution=15s
                      - --kubelet-insecure-tls
                  image: k8s.gcr.io/metrics-server/metrics-server:v0.6.1
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                      failureThreshold: 3
                      httpGet:
                          path: /livez
                          port: https
                          scheme: HTTPS
                      periodSeconds: 10
                  name: metrics-server
                  ports:
                      - containerPort: 4443
                        name: https
                        protocol: TCP
                  readinessProbe:
                      failureThreshold: 3
                      httpGet:
                          path: /readyz
                          port: https
                          scheme: HTTPS
                      initialDelaySeconds: 20
                      periodSeconds: 10
                  resources:
                      requests:
                          cpu: 100m
                          memory: 200Mi
                  securityContext:
                      allowPrivilegeEscalation: false
                      readOnlyRootFilesystem: true
                      runAsNonRoot: true
                      runAsUser: 1000
                  volumeMounts:
                      - mountPath: /tmp
                        name: tmp-dir
            nodeSelector:
                kubernetes.io/os: linux
            priorityClassName: system-cluster-critical
            serviceAccountName: metrics-server
            volumes:
                - emptyDir: {}
                  name: tmp-dir
