k8s/manifests/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: backend
    labels:
        app: backend
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        - http:
              paths:
                  - path: /app
                    pathType: Prefix
                    backend:
                        service:
                            name: backend
                            port:
                                name: http
